feat: 로또 수동 생성 기능 추가